--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,20 @@
     <artifactId>paho-publish-subscribe</artifactId>
     <version>1.0</version>
 
+    <description>
+        An example project for Eclipse Paho which implements a basic Subscriber and a basic Publisher.
+    </description>
+
+    <developers>
+        <developer>
+            <id>dobermai</id>
+            <name>Dominik Obermaier</name>
+            <email>dominik.obermaier@dc-square.de</email>
+            <organization>dc-square GmbH</organization>
+            <organizationUrl>http://www.dc-square.de</organizationUrl>
+        </developer>
+    </developers>
+
     <dependencies>
         <dependency>
             <groupId>org.eclipse.paho</groupId>
